--- a/desafio1/style.css
+++ b/desafio1/style.css
@@ -66,7 +66,22 @@ input:focus {
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
 
+/* Reset de estilos para botões */
+button,
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
+  appearance: none; /* Remove estilos específicos do sistema operacional */
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: inherit;
+  padding: 8px;
+}
+
 /* Adicione outros estilos específicos conforme necessário */
+
 
 
 /* ----------------------------------------------- */
@@ -84,7 +99,8 @@ input:focus {
 .funcoes {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 50px 0;
 }
 
 .funcoes input {
@@ -97,6 +113,32 @@ input:focus {
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 48px */
+}
+
+.funcoes button {
+  width: 328px;
+  padding: 24px;
+  border-radius: 24px;
+  background: var(--Dark-blue-dark-blue-300, #0A3871);
+  margin-right: 10px;
+
+  color: var(--White, #FFF);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.funcoes .descriptografar {
+  border: 1px solid var(--Dark-blue-dark-blue-300, #0A3871);
+  background: #D8DFE8;
+
+  color: var(--Dark-blue-dark-blue-300, #0A3871);
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .lembrete {
