--- a/desafio1/style.css
+++ b/desafio1/style.css
@@ -181,3 +181,28 @@ input[type="reset"] {
   font-weight: 400;
   line-height: 150%; /* 24px */
 }
+
+.encontrado {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 20px;
+  height: 100%;
+}
+
+
+#copy {
+  width: 336px;
+  padding: 24px;
+  align-items: center;
+  gap: 8px;
+
+
+  border-radius: 24px;
+  border: 1px solid var(--Dark-blue-dark-blue-300, #0A3871);
+}
+
+.hidden {
+  display: none;
+}
