--- a/flex-box/css/flexbox.css
+++ b/flex-box/css/flexbox.css
@@ -10,6 +10,14 @@
   display: none;
 }
 
+.superior__secao__container {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  overflow: scroll;
+  gap: 15px;
+}
+
 .rodape__container {
   display: flex;
   /* flex-direction: column;
